Fix facility service with new mdms data and add update, getSummary and search API (#619)
* Fix facility service

* Add two more APIs

* Resolve comments

* Resolve SonarQube

* Fix building issues

---------

Co-authored-by: sahil.dileep <sahil.dileep@beehyv.com>